# Lyrebird

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  deny.toml  meson.build  rust-toolchain.toml  rustfmt.toml
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
include/: meson.build  playback.hxx
include/playlist/: entry.hxx  playlist.hxx
libAudio-rs/: Cargo.toml  build.rs  meson.build
libAudio-rs/src/: audioFile.rs  bindings.rs  fileInfo.rs  lib.rs  meson.build
lyrebird/: Cargo.toml
lyrebird/src/: config.rs  library.rs  libraryTree.rs  main.rs  options.rs  playback.rs  playlist.rs  playlists.rs  window.rs
lyrebird/src/widgets/: mod.rs  tabBar.rs
playground/: tree.py
playground/lyrebird/: __main__.py  widgets.py  window.py
playground/lyrebird/panes/: __init__.py  libraryTree.py
src/: lyrebird.cxx  meson.build  playback.cxx
src/playlist/: playlist.cxx
