[package]
name = "libAudio"
version = "0.1.0"
description = "Rust bindings for libAudio"
license = "BSD-3-Clause"
authors = ["Rachel Mant <git@dragonmux.network>"]
edition = "2021"

[lib]
name = "libAudio"
path = "src/lib.rs"

[build-dependencies]
meson-next = "1.2.3"

[dependencies]
color-eyre = "0.6.3"
