[package]
name = "libAudio"
version = "0.1.0"
description = "Rust bindings for libAudio"
license = "BSD-3-Clause"
authors = ["Rachel Mant <git@dragonmux.network>"]
edition = "2021"
links = "Audio"

[lib]
name = "libAudio"
path = "src/lib.rs"

[build-dependencies]
cc = "1.2.17"
meson-next = "1.2.3"

[dependencies]
color-eyre = "0.6.3"
