[package]
name = "lyrebird"
version = "0.1.0"
description = "Music player written in Rust based on libAudio"
license = "BSD-3-Clause"
authors = ["Rachel Mant <git@dragonmux.network>"]
edition = "2021"

[dependencies]
color-eyre = "0.6.3"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "6.0.0"
itertools = "0.13.0"
libAudio = { version = "0.1.0", path = "../libAudio-rs" }
ratatui = "0.29"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.140", features = ["preserve_order", "float_roundtrip", "raw_value"] }
serde_repr = "0.1.20"
tokio = { version = "1.44.1", features = ["macros", "rt", "rt-multi-thread", "sync", "time", "tracing"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["tracing"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
unicode-segmentation = "1.12.0"
unicode-width = "0.2.0"
